This file documents the revision history for UFL::Phonebook.

0.31
        - Switch from ugly UFL::Controller::Authentication to
          UFL::Authentication::Credential::GatorLink
        - Move automatic authentication to
          UFL::Phonebook::Controller::Root/auto (includes
          configuration changes)

0.30  Sat Mar  7 16:17:42 EST 2009
        - Update list of directories
        - Switch to dir8.osg.ufl.edu at Allen Rout's request

0.29  Fri Oct  3 16:02:54 EDT 2008
        - Hide employeeNumber for student-student interactions (#26)

0.28  Wed Aug 20 16:44:38 EDT 2008
        - Update query tokenizer to trim leading and trailing space so
          spurious tokens don't end up in LDAP queries

0.27  Wed Jul 16 12:10:23 EDT 2008
        - Tweak search filters to be a little more broad, using the
          raw query and more wildcards, in order to handle cases where
          someone's maiden name is their middle name (#15)

0.26  Thu Jun 26 17:48:51 EDT 2008
        - Redirect on single result only when a query is provided (for
          e.g. /units/*/people/)
        - Improve tokenizer and query builder for current state of
          names in LDAP
        - Add filtering of test entries from LDAP
        - Add the default list of test entries to filter to the main
          configuration file

0.25  Mon May 19 11:50:33 EDT 2008
        - Make the proxy authentication control critical to avoid
          privacy leaks
        - Improve error message for failed kinit commands
        - Switch to dir7.osg.ufl.edu for LDAP queries to make SASL and
          thus proxy authentication work

0.24  Tue Apr 29 12:21:35 EDT 2008
        - Direct links to private pages now go to the right place
          instead of redirecting to the private home page (#3)
        - Fix poor URI construction for private instance (#2)
        - Configuration change: Controller::Authentication's
          authenticated_uri becomes authenticated_path_segments
        - Remove