@@ -6,6 +6,8 @@ This file documents the revision history for UFL::Phonebook.
         - Move automatic authentication to
           UFL::Phonebook::Controller::Root/auto (includes
           configuration changes)
+        - Switch from Class::C3 to MRO::Compat for Perl 5.10
+          compatibility
 
 0.30  Sat Mar  7 16:17:42 EST 2009
         - Update list of directories
